JG-2003-04-15-0  Enhancem.: Added infrastructure for spooling to PostgreSQL 
                            database.
                            Use relative include paths for spooling related 
                            includes.
                            Fixed dependencies on spooling libraries.

CR-2003-04-14-0  Testsuite: communication test:
                            added version information to test report

CR-2003-04-11-0  Testsuite: communication test:
                            added function communication_compare_data_files() to
                            compare test data files.

JG-2003-04-11-1  Enhancem.: Pass answer list to functions defined in the 
                            spooling framework. 
                            Validate / output contents of this answer list after
                            every call to a spooling function.
                            Removed unused I18N messages in various modules.

JG-2003-04-11-0  Testsuite: procedure unsuspend_job failed with tcl error
                 Review:    CR

JG-2003-04-10-0  Testsuite: avoid testsuite timeout during install_qmaster
                            when SGE is installed on a slow NFS mounted 
                            filesystem. 
                 Review:    CR

EB-2003-04-10-1  Testsuite: test #524: qdel -u <user> does not delete all jobs 
                            of the user
                 Issue:     528

EB-2003-04-10-0  Testsuite: test #526: cannot qalter/qhold/qrls several tasks 
                            of same job
                 Issue:     527

CR-2003-04-09-2  Testsuite: communication test:
                            using testsuite_snd/_rcv -tcp-close option for test

CR-2003-04-09-1  Testsuite: using of open_spawn_process() may cause problems
                            on NFS mounted testsuite installations. Using
                            open_remote_spawn_process() even for local spawns.
